force-app/main/default/objects/MarketingLink_Home__dll/fields/TargetUrl__c.field-meta.xml
<CustomField>
    <fullName>TargetUrl__c</fullName>
    <label>TargetUrl</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>TargetUrl</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Url</type>
</CustomField>